# emailnotify

./: LICENSE  README.rst  flake.nix  pyproject.toml  shell.nix
emailnotify/: __main__.py  emailnotify.py
