[tool.poetry]
name = "emailnotify"
version = "0.1.0"
description = "Email notification daemon"
authors = ["kanashimia"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.6"
IMAPClient = "^2.2.0"
notify-py = "^0.3.1"
keyring = "^21.5.0"
appdirs = "^1.4.4"

[tool.poetry.scripts]
emailnotify = "emailnotify.emailnotify:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
